---------------------------------------------------------------------------------------------------
Version: 5.2.14
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.2.13
Date: 2020-11-08
  Bugfixes:
    - Fixed error when shift-clicking items to move them
---------------------------------------------------------------------------------------------------
Version: 5.2.12
Date: 2020-11-07
  Changes:
    - Applying changes or pressing enter after changing the trash amount will display a message if the the amount got adjusted to the request amount.
  Bugfixes:
    - Fixed error when changing the trash amount via keyboard
---------------------------------------------------------------------------------------------------
Version: 5.2.11
Date: 2020-11-06
  Bugfixes:
    - Fixed "Trash above requested" not working if no trash amount was set
    - Fixed temporary trash not working if the item was already set
    - Fixed errors when using the commands: /at_show and /at_hide
---------------------------------------------------------------------------------------------------
Version: 5.2.10
Date: 2020-11-01
  Bugfixes:
    - Fixed requests not being set properly
    - Fixed button and textfields showing nothing if request is 0 and trash is unlimited
---------------------------------------------------------------------------------------------------
Version: 5.2.9
Date: 2020-10-31
  Changes:
    - Added a pin button to the gui, to keep it open when pressing E/Escape. By default the gui will stay open.
    - Added a tooltip to the top button, showing the control to toggle the status display
    - Researching the personal logistics opens the status display
  Bugfixes:
    - Fixed UPS drop when deconstructing roboports with construction robots
---------------------------------------------------------------------------------------------------
Version: 5.2.8
Date: 2020-10-30
  Bugfixes: