@@ -32,13 +32,14 @@ tooltip-add-network=Add current to main networks
 tooltip-remove-network=Remove current from main networks
 tooltip-edit-networks=Edit networks
 tooltip-selection-tool=Select roboports with the tool to add them to networks\nShift + select to remove them.
+tooltip-show-network=Show in map
 
 [at-message]
 name-not-set=You must enter a name!
 name-in-use=This name is already used!
 not-in-network=No network found!
-no-network-set=No main network set.
-network-unset=Autotrash main network has been unset.
+no-network-set=No network set.
+network-unset=Autotrash network #__1__ has been unset.
 network-lost=AutoTrash lost the main network. You will have to set it again.
 import-error=Invalid AutoTrash configuration. Only blueprints/strings created with AutoTrash can be imported.
 no-character=Auto Trash: No character, closing gui.
@@ -53,9 +54,10 @@ empty-cursor-needed=Click with an empty cursor.
 trash-paused=Autotrash paused
 trash-unpaused=Autotrash unpaused
 adjusted-trash-amount=Adjusted trash amount for __1__ to __2__
-added-network=Added __1__ #__2__
-removed-network=Removed __1__ #__2__
-network-exists=__1__ #__2__ already added
+added-network=Added network #__1__
+removed-network=Removed network #__1__
+network-exists=Network #__1__ already added
+merged-networks=Merged network #__1__ and #__2__
 
 [controls]
 autotrash_pause=Pause Autotrash
