@@ -2,6 +2,7 @@
 Version: 5.2.14
 Date: ????
   Changes:
+    - Added support for multiple main networks.
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.13
 Date: 2020-11-08
